# BoxHead

./: .gitignore  README.md  boxhead.db  package-lock.json  package.json  tsconfig.server.json  vite.config.ts
backend/: Cargo.toml
backend/src/: db.rs  delta.rs  game.rs  main.rs  map.rs  social.rs  spatial_grid.rs  types.rs
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: constants.ts  index.html  main.ts
schema/: types.json
src/client/: index.html  main.ts  test.spec.ts
src/server/: delta.ts  game.spec.ts  game.ts  index.ts  spatial-grid.ts
src/shared/: types.ts
